--- a/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
+++ b/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
@@ -168,29 +168,6 @@
   <string name="error_share_not_support">Such items arent supported in favorites.</string>
   <string name="exercise_setting_brief">Měřte prochozenou vzdálenost a počet kroků</string>
   <string name="exercise_setting_misport_detail">Měřte prochozenou vzdálenost a počet kroků (Povolte MiFit autostart v Optimalizace - Povolení).</string>
-  <string name="fav_category_article">Articles</string>
-  <string name="fav_category_shopping">Shopping</string>
-  <string name="fav_category_video">Videos</string>
-  <string name="fav_detail_nodata">Couldnt find info</string>
-  <string name="fav_init_guide_title">About favorites</string>
-  <string name="fav_network_error">Network error</string>
-  <string name="fav_nodata_tip">No favorites</string>
-  <string name="fav_search_nodata_tip">Couldnt find results</string>
-  <string name="fav_success">Added to favorites successfully</string>
-  <string name="favorite">Favorites</string>
-  <string name="favorite_add_home">Add to Home screen</string>
-  <string name="favorite_add_home_add">Add</string>
-  <string name="favorite_add_home_cancel">Cancel</string>
-  <string name="favorite_add_home_content">Add Favorites to Home screen?</string>
-  <string name="favorite_add_home_process">Adding…</string>
-  <string name="favorite_all_selec">Select all</string>
-  <string name="favorite_cancel">Cancel</string>
-  <string name="favorite_clipboard_tip">Add the address from the clipboard to favorites?</string>
-  <string name="favorite_delete">Delete</string>
-  <string name="favorite_important">Important</string>
-  <string name="favorite_label">Favorites</string>
-  <string name="favorite_main">History</string>
-  <string name="favorite_mark_important">Marked as important</string>
   <string name="focus">Follow status</string>
   <string name="focus_stocks">My companies</string>
   <string name="function_tools_parent">Nástroje</string>
@@ -389,14 +366,9 @@
   <string name="steps_vip">Krokoměr</string>
   <string name="steps_vip_des">Počítat kroky pomocí senzoru v telefonu.</string>
   <string name="study_parent">Rozpoznat</string>
-  <string name="system_favorite_dialog_link">Security &amp; privacy</string>
-  <string name="system_favorite_dialog_message">Add your favorites from other apps here.</string>
-  <string name="system_favorite_dialog_negative">Cancel</string>
-  <string name="system_favorite_dialog_positive">Allow</string>
-  <string name="system_favorite_dialog_title_confirm">Favorites</string>
   <string name="time_just_now">Just now</string>
-  <string name="time_month">MM/dd</string>
-  <string name="time_year">MM/dd/yyyy</string>
+  <string name="time_month">dd.MM</string>
+  <string name="time_year">dd.MM.yyyy</string>
   <string name="toast_function_add_not_allowed">You can add up to 10 shortcuts</string>
   <string name="toast_function_remove_not_allowed">You should add at least 1 shortcut</string>
   <string name="total_month_desc_text">This month</string>
@@ -485,7 +457,7 @@
     <string name="miot_device_mijia_uninstall_title">Není nainstalován</string>
     <string name="miot_device_network_error">Žádné připojení</string>
   <string name="preload_empty">Žádné položky. Potáhněte dolů pro obnovení.</string>
-  <string name="quick_app_setting_brief">Nedávná použité aplikace</string>
+  <string name="quick_app_setting_brief">Nedávno použité aplikace</string>
   <string name="quick_app_setting_brief_detail">Zobrazit všechny aplikace, které jste použili</string>
   <string name="quick_app_title">Nedávné aplikace</string>
   <string name="recommend_empty_tip">Žádné položky. Můžete přidat více zařízení.</string>
@@ -497,4 +469,79 @@
   <string name="setting_title_resident_function">Permanentní funkce</string>
   <string name="toast_function_add_limit">Můžete přidat až %d zkratek</string>
   <string name="all_function_title">Všechny zkratky</string>
+  <string name="authorize_button">Povolit</string>
+  
+  <string name="authorize_fav_tip">Přidat Záložky z jiných aplikací.</string>
+  <string name="card_title_favorite">Záložky</string>
+  <string name="detail_title">Záložky</string>
+  <string name="dialog_delete_desc">Odstranit ze Záložek?</string>
+  <string name="dialog_delete_title">Odstranit ze Záložek</string>
+  <string name="empty_fav_card_btn">Všechny záložky</string>
+  <string name="empty_fav_card_tip">Žádné záložky.</string>
+  <string name="error_share_not_support">Tyto položky nejsou podporovány.</string>
+  <string name="fav_category_article">Položky</string>
+  <string name="fav_category_shopping">Nakupování</string>
+  <string name="fav_category_video">Videa</string>
+  <string name="fav_detail_nodata">Nebylo možné najít informace</string>
+  <string name="fav_download">Stáhnout a nainstalovat tuto aplikaci?</string>
+  <string name="fav_init_guide_title">O Záložkách</string>
+  <string name="fav_label">Záložky</string>
+  <string name="fav_more">Všechny Záložky</string>
+  <string name="fav_network_error">Chyba sítě</string>
+  <string name="fav_nodata_tip">Žádné složky</string>
+  <string name="fav_search_nodata_tip">Nic se nenašlo</string>
+  <string name="fav_share_fail">Nebylo možné sdílet. Můžete přidat pouze URL do záložek.</string>
+  <string name="fav_success">Přidáno do záložek</string>
+  <string name="fav_support_introduce">Spravovat záložky pro jednotlivé aplikace</string>
+  <string name="fav_support_label">Záložky aplikací</string>
+  <string name="fav_support_more">Všechny podporované aplikace</string>
+  <string name="fav_support_not_title">Záložky se nezobrazí v seznamu</string>
+  <string name="fav_support_title">Záložky se zobrazí v seznamu</string>
+  <string name="fav_tab_all">Vše</string>
+  <string name="fav_tab_article">Položky</string>
+  <string name="fav_tab_new">Nové</string>
+  <string name="fav_tab_shopping">Produkty</string>
+  <string name="fav_tab_video">Videa</string>
+  <string name="favorite">Záložky</string>
+  <string name="favorite_add_home">Přidat na plochu</string>
+  <string name="favorite_add_home_add">Přidat</string>
+  <string name="favorite_add_home_cancel">Zrušit</string>
+  <string name="favorite_add_home_content">Přidat záložky na plochu?</string>
+  <string name="favorite_add_home_process">Přidávání...</string>
+  <string name="favorite_all_selec">Vše</string>
+  <string name="favorite_cancel">Zrušit</string>
+  <string name="favorite_clipboard_tip">Přidat adresu ze schránky do Záložek?</string>
+  <string name="favorite_delete">Vymazat</string>
+  <string name="favorite_important">Důležité</string>
+  <string name="favorite_label">Záložky</string>
+  <string name="favorite_main">Historie</string>
+  <string name="favorite_title_limit">Vložte max 40 znaků</string>
+  <string name="favorite_title_modify">Upravit</string>
+  <string name="favorite_title_modify_failed">Nelze změnit název</string>
+  <string name="favorite_title_modify_success">Upraveno</string>
+  <string name="notification_channel_default">Výchozí</string>
+  <string name="notification_channel_default_description">Ostatní upozornění</string>
+  <string name="notification_channel_favorite_description">Upozornění o položkách přidaných do záložek v jiných aplikacích.</string>
+  <string name="notification_channel_shopping_description">Upozornění o produktech přidaných do záložek</string>
+  <string name="notification_title">Přidáno do záložek</string>
+  <string name="send_action_title">Přidat do záložek</string>
+  <string name="search_setting_description">Názvy v záložkách</string>
+  <string name="search_hint">Vyhledat v záložkách</string>
+  <string name="setting_fav_authorize">Povolit přístup do všech záložek</string>
+  <string name="setting_fav_notification">Upozornit když je něco přidáno do záložek</string>
+  <string name="setting_fav_remove_content">Karta bude vymazána pokud zakážete přístup k záložkám. Chcete zakázat přístup?</string>
+  <string name="setting_fav_remove_neg">Zrušit</string>
+  <string name="setting_fav_remove_posi">Zakázat</string>
+  <string name="setting_fav_remove_title">Zakázat</string>
+  <string name="setting_fav_remove_toast_disable">Přístup k záložkám je povolen</string>
+  <string name="setting_fav_remove_toast_enable">Přístup k záložkám je zakázán</string>  
+  <string name="settings_subtitle">Dostávat upozornění pokud je něco přidáno do záložek</string>
+  <string name="settings_title">Upozornit o přidání do záložek</string>
+  <string name="system_favorite_dialog_link">Bezpečnost a soukromí</string>
+  <string name="system_favorite_dialog_message">Záložky z různých aplikací a služeb budou přidány do karty asistenta. Povolit?</string>
+  <string name="system_favorite_dialog_negative">Ukončit</string>
+  <string name="system_favorite_dialog_positive">Povolit</string>
+  <string name="system_favorite_dialog_title_confirm">Vyžaduje povolení</string>  
+  <string name="just_now">Právě nyní</string>
+  <string name="time_just_now">Právě nyní</string>
 </resources>
