--- a/Czech/main/MiSound.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiSound.apk/res/values-cs/strings.xml
@@ -1,87 +1,87 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Sluchadlá a zvukové efekty</string>
-  <string name="eq_auto">Vlastný</string>
+  <string name="app_name">Sluchátka a zvukové efekty</string>
+  <string name="eq_auto">Vlastní</string>
   <string name="eq_blues">Blues</string>
-  <string name="eq_cancel">Zrušiť</string>
+  <string name="eq_cancel">Zrušit</string>
   <string name="eq_classical">Klaska</string>
   <string name="eq_country">Country</string>
   <string name="eq_dance">Dance</string>
-  <string name="eq_delete">Odstrániť</string>
+  <string name="eq_delete">Odstranit</string>
   <string name="eq_delete_success">Hotovo</string>
   <string name="eq_electronic">Electronic</string>
-  <string name="eq_flat">Predvolený</string>
+  <string name="eq_flat">Výchozí</string>
   <string name="eq_hiphop">Hip Hop</string>
   <string name="eq_jazz">Jazz</string>
   <string name="eq_metal">Metal</string>
   <string name="eq_ok">OK</string>
   <string name="eq_pop">Pop</string>
-  <string name="eq_preset_create">Vytvoriť</string>
-  <string name="eq_preset_format">Vlastné nastavenie %d</string>
-  <string name="eq_preset_hint">Názov efektu</string>
-  <string name="eq_preset_rename">Premenovať</string>
-  <string name="eq_preset_select">Vyberte nastavenie</string>
-  <string name="eq_return">Naspäť</string>
+  <string name="eq_preset_create">Vytvořit</string>
+  <string name="eq_preset_format">vlastní nastavení %d</string>
+  <string name="eq_preset_hint">Název efektu</string>
+  <string name="eq_preset_rename">Přejmenovat</string>
+  <string name="eq_preset_select">Vyberte nastavení</string>
+  <string name="eq_return">Nazpět</string>
   <string name="eq_rock">Rock</string>
-  <string name="equalizer">Ekvalizér</string>
-  <string name="input_hint_prefix">Zadajte %1$s</string>
-  <string name="music_app_unavailable">Uistite sa, že je dostupná aplikácia Mi Hudba.</string>
-  <string name="music_audio_effect_optimize">Nastavenie zvuku</string>
-  <string name="music_audio_effect_optimize_summary">Dirac, slúchadlá a ostatné nastavenia</string>
-  <string name="music_audio_effect_optimize_summary_with_hd">Dirac, HD Sound, slúchadlá a ostatné nastavenia zvuku</string>
-  <string name="music_audio_effect_optimize_summary_with_hifi">Dirac, Hi-Fi, slúchadlá a ostatné nastavenia</string>
-  <string name="music_audio_effect_settings">Nastavenie efektov</string>
-  <string name="music_dirac_control">Vylepšiť kvalitu zvuku</string>
+  <string name="equalizer">Ekvalizer</string>
+  <string name="input_hint_prefix">Zadejte %1$s</string>
+  <string name="music_app_unavailable">Ujistěte se, že je dostupná aplikace Mi hudbaa.</string>
+  <string name="music_audio_effect_optimize">Nastavení zvuku</string>
+  <string name="music_audio_effect_optimize_summary">Dirac, sluchátka a ostatní nastavení</string>
+  <string name="music_audio_effect_optimize_summary_with_hd">Dirac, HD Sound, sluchátka a ostatní nastavení zvuku</string>
+  <string name="music_audio_effect_optimize_summary_with_hifi">Dirac, Hi-Fi, sluchátka a ostatní nastavení</string>
+  <string name="music_audio_effect_settings">Nastavení efektů</string>
+  <string name="music_dirac_control">Vylepšit kvalitu zvuku</string>
   <string name="music_dirac_mode_cancelling">Mi Noise Cancelling 3.5mm</string>
   <string name="music_dirac_mode_capsule">MiCapsule</string>
-  <string name="music_dirac_mode_earbuds">Mi slúchadlá</string>
-  <string name="music_dirac_mode_general">Obyčajné</string>
-  <string name="music_dirac_mode_general_earbuds">Bežné slúchadlá</string>
-  <string name="music_dirac_mode_general_inear">Bežné špunty</string>
-  <string name="music_dirac_mode_headset">Mi Slúchadlá</string>
+  <string name="music_dirac_mode_earbuds">Mi sluchátka</string>
+  <string name="music_dirac_mode_general">Obyčejné</string>
+  <string name="music_dirac_mode_general_earbuds">Běžné sluchátka</string>
+  <string name="music_dirac_mode_general_inear">Běžné špunty</string>
+  <string name="music_dirac_mode_headset">Mi Sluchátka</string>
   <string name="music_dirac_mode_in_ear">Mi špunty</string>
   <string name="music_dirac_mode_in_ear_pro">Mi In-Ear Pro</string>
   <string name="music_dirac_mode_off">Dirac vypnutý</string>
   <string name="music_dirac_mode_piston_1">Mi Piston-1</string>
   <string name="music_dirac_mode_piston_100">Mi Pistons</string>
   <string name="music_dirac_mode_piston_2">Mi Piston-2</string>
-  <string name="music_dirac_mode_piston_basic">Základné</string>
+  <string name="music_dirac_mode_piston_basic">Základní</string>
   <string name="music_dirac_mode_piston_color">Color Edition</string>
   <string name="music_dirac_mode_piston_standard">Mi Piston-3</string>
   <string name="music_dirac_mode_piston_youth">Mi Youth</string>
-  <string name="music_dirac_mode_reduction_noise">Redukcia šumu (USB-C)</string>
+  <string name="music_dirac_mode_reduction_noise">Redukce šumu (USB-C)</string>
   <string name="music_dirac_mode_headset_comfort">Mi Comfort</string>
-  <string name="music_dirac_mode_india_earphones">Mi Slúchadlá</string>
-  <string name="music_dirac_mode_india_earphones_basic">Mi Slúchadlá Základné</string>
+  <string name="music_dirac_mode_india_earphones">Mi Sluchátka</string>
+  <string name="music_dirac_mode_india_earphones_basic">Mi Sluchátka základní</string>
   <string name="music_dolby_mode_movie">Video</string>
   <string name="music_dolby_mode_music">Hudba</string>
   <string name="music_dolby_mode_off">Vypnutý</string>
-  <string name="music_equalizer">Ekvalizér</string>
-  <string name="music_equalizer_summary">Nastaviť úroveň pre rôzné typy hudby</string>
+  <string name="music_equalizer">Ekvalizer</string>
+  <string name="music_equalizer_summary">Nastavit úroveň pro různé typy hudby</string>
   <string name="music_hd_title">HD Sound</string>
-  <string name="music_headphone_settings">Typ slúchadiel</string>
-  <string name="music_headset_button_settings">Nastavenie tlačidiel</string>
-  <string name="music_headset_calibrate">Kalibrovať tlačidlá</string>
-  <string name="music_headset_calibrate_apply">Použiť</string>
-  <string name="music_headset_calibrate_confirm">Funkcia tlačidiel je upravená. Chcete uložiť?</string>
-  <string name="music_headset_calibrate_hint">Stlačte horné tlačidlo</string>
-  <string name="music_headset_calibrate_next_track">Nasledujúca skladba</string>
-  <string name="music_headset_calibrate_prev_track">Predchádzajúca skladba</string>
-  <string name="music_headset_calibrate_success">Nastavenia použité</string>
-  <string name="music_headset_calibrate_volume_down">Znížiť hlasitosť</string>
-  <string name="music_headset_calibrate_volume_up">Pridať hlasitosť</string>
-  <string name="music_headset_calibrate_wrong_key">Stlačené tlačidlo je nesprávne. Stlačte opäť</string>
-  <string name="music_headset_function">Funkcia tlačidiel</string>
-  <string name="music_headset_mode_music">Prehrávanie - naspäť/ďalej</string>
-  <string name="music_headset_mode_settings">Tlačidlá na slúchadlách</string>
-  <string name="music_headset_mode_volume">Hlasitosť - hore/dole</string>
-  <string name="music_headset_no_contected">Nie sú pripojené slúchadlá</string>
-  <string name="music_headset_settings">Slúchadlá</string>
-  <string name="music_hifi_summary">Znížiť hlasitosť a skreslenie a zvýšiť tým kvalitu prehrávanej hudby. Táto funkcia zvýši spotrebu batérie.</string>
+  <string name="music_headphone_settings">Typ sluchátek</string>
+  <string name="music_headset_button_settings">Nastavení tlačítek</string>
+  <string name="music_headset_calibrate">Kalibrovat tlačítka</string>
+  <string name="music_headset_calibrate_apply">Použát</string>
+  <string name="music_headset_calibrate_confirm">Funkce tlačítek je upravena. Chcete uložit?</string>
+  <string name="music_headset_calibrate_hint">Stiskněte horní tlačítko</string>
+  <string name="music_headset_calibrate_next_track">Následující skladba</string>
+  <string name="music_headset_calibrate_prev_track">Předchozí skladba</string>
+  <string name="music_headset_calibrate_success">Nastavení použito</string>
+  <string name="music_headset_calibrate_volume_down">Snížit hlasitost</string>
+  <string name="music_headset_calibrate_volume_up">Přidat hlasitost</string>
+  <string name="music_headset_calibrate_wrong_key">Stlačené tlačítko je nesprávné. Stiskněte opět</string>
+  <string name="music_headset_function">Funkce tlačítek</string>
+  <string name="music_headset_mode_music">Přehrávání - zpět/další</string>
+  <string name="music_headset_mode_settings">Tlačítka na sluchátkách</string>
+  <string name="music_headset_mode_volume">Hlasitost - nahoru/dolů</string>
+  <string name="music_headset_no_contected">Nejsou připojena sluchátka</string>
+  <string name="music_headset_settings">Sluchátka</string>
+  <string name="music_hifi_summary">Snížit hlasitost a zkreslení a zvýšit tím kvalitu přehrávané hudby. Tato funkce zvýší spotřebu baterie.</string>
   <string name="music_hifi_title">Hi-Fi audio</string>
-  <string name="music_hifi_volume">Hlasitosť Hi-Fi</string>
-  <string name="music_mi_effect_summary">Vždy použiť Dirac HD Sound pri použití slúchadiel</string>
+  <string name="music_hifi_volume">Hlasitost Hi-Fi</string>
+  <string name="music_mi_effect_summary">Vždy použít Dirac HD Sound při použití sluchátek</string>
   <string name="music_mi_effect_title">Dirac HD Sound</string>
   <string name="music_title_dolby_control">Dolby Digital Plus</string>
-  <string name="music_unsupport_effect_summary">Nepodporované USB slúchadlá</string>
+  <string name="music_unsupport_effect_summary">Nepodporovaná USB sluchátka</string>
 </resources>
