--- a/Czech/main/Updater.apk/res/values-cs/strings.xml
+++ b/Czech/main/Updater.apk/res/values-cs/strings.xml
@@ -60,4 +60,6 @@ Vaše data budou zachována."</string>
   <string name="channel_downloading">Průběh stahování</string>
   <string name="channel_update">Dostupná nová verze MIUI</string>
   <string name="dialog_twrp">Vaše interní úložiště je zašifrované. Po restartu do TWRP, zadejte vaše heslo pro odemknutí zařízení pro dešifrování úložiště.</string>
+<string name="default_filedownloader_notification_content">Probíhá stahování aktualizace...</string>
+  <string name="default_filedownloader_notification_title">Nová verze MIUI</string>  
 </resources>
