--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -760,4 +760,11 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
   <string name="pref_menu_ultra_pixel_photography_64mp">64MP</string>
   <string name="ultra_pixel_photography_64mp_close_tip">64MP</string>
   <string name="ultra_pixel_photography_64mp_open_tip">64MP</string>
+  <string name="pref_watermark_off">Vyp</string>
+  <string name="pref_watermark_on">Zap</string>
+  <string name="pref_watermark_title">Vodoznak</string>
+  <string name="pref_camera_lying_summary">Upozornit na aktuální orientaci pokud je telefon paralelně se zemí</string>
+  <string name="pref_camera_lying_title">Upozornit na orientaci</string>
+  <string name="user_define_watermark_cancel">Zrušit</string>
+  <string name="user_define_watermark_save">Uložit</string>
 </resources>
