--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -105,7 +105,7 @@ Poznámka: Zvětšení trojitým klepnutím funguje ve všech částech obrazovk
   <string name="account_settings_menu_auto_sync">Auto. synchronizovat data</string>
   <string name="account_settings_menu_auto_sync_personal">Auto. synchr. osobní data</string>
   <string name="account_settings_menu_auto_sync_work">Auto. synchr. pracovní data</string>
-  <string name="account_settings_title">Účty</string>
+  <string name="account_settings_title">Google a ostatní účty</string>
   <string name="account_sync_settings_title">Synchronizace</string>
   <string name="activate_miui_screensaver">Spořič displeje během spánku</string>
   <string name="activating">Aktivuji...</string>
@@ -5910,5 +5910,36 @@ Chcete-li použít tuto funkci, zapněte nabídku dostupnosti a klepněte na tla
   <string name="dangerous_option">Nebezpečné vývojářské nastavení</string>
   <string name="dangerous_option_hint">\"%1$s\" je povolené. Dotykem změníte nastavení.</string>
   <string name="dangerous_option_hint_title">Nebezpečná funkce povolena</string>
-  <string name="dangerous_option_switch_title">Upozornit na nebezpečné funkce</string>    
+  <string name="dangerous_option_switch_title">Upozornit na nebezpečné funkce</string>  
+  <string name="aod_and_lock_screen_settings_title">Ambientní displej a Zámek obrazovky</string>
+  <string name="aod_settings_category_name">Ambientný displej</string>
+  <string name="aod_settings_title">Ambientný displej</string>
+  <string name="applications_settings_title">Aplikace</string>
+  <string name="feedback_settings">Zpětná vazba</string>
+  <string name="full_screen_display">Režim celé obrazovky</string>
+  <string name="game_booster_title">Zrychlení her</string>
+  <string name="gmscore_settings_title">Základní Google služby</string>
+  <string name="google_account_title">Google</string>
+  <string name="google_service_title">Google služby</string>
+  <string name="headset_settings_title">Sluchátka</string>
+  <string name="home_title">Domácí obrazovka</string>
+  <string name="key_shortcut_settings_title">Zkratky tlačítek</string>
+  <string name="lock_screen_display_category_name">Zámek obrazovky</string>
+  <string name="lock_screen_tip_toast">Nejdříve povolte v nastavení upozornění</string>
+  <string name="miui_sos_emergency_delete">Vymazat</string>
+  <string name="more_account_settings_title">Ostatní účty</string>
+  <string name="notch_and_status_bar_settings">Výřez a lišta upozornění</string>
+  <string name="notch_settings">Výřez</string>
+  <string name="notification_center">Upozornění</string>
+  <string name="other_sound_settings_title">Další upozornění</string>
+  <string name="password_security_settings_title">Hesla a bezpečnost</string>
+  <string name="password_unlock_title">Hesla</string>
+  <string name="privacy_protection_title">Soukromí</string>
+  <string name="recommend_tip">Hledáte jiná nastavení?</string>
+  <string name="screen_settings">Zámek obrazovky</string>
+  <string name="settings_new_version_btn">Aktualizace</string>
+  <string name="status_bar_title">Lišta upozornění</string>
+  <string name="unlock_mode_title">Zámek obrazovky</string>
+  <string name="volume_launch_camera_summary">Dvojitým stisknutím tlačítka hlasitosti spustit Fotoaparát pokud je uzamčena obrazovka</string>
+  <string name="wakeup_and_sleep_settings_category_name">Nastavení zámku obrazovky</string><B></B>  
 </resources>
