--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5438,9 +5438,9 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="gxzw_anim_rhythm">Rytmus</string>
   <string name="gxzw_anim_title">Animace otisku prstu</string>
   <string name="child_mode_settings">Rodičovský zámok</string>
-  <string name="dangerous_option">High-risk developer options</string>
-  <string name="dangerous_option_hint">%1$s je povoleno. Dotykem změníte nastavení.</string>
-  <string name="dangerous_option_hint_title">High-risk feature enabled</string>
+  <string name="dangerous_option">Nebezpečné vývojářské nastavení</string>
+  <string name="dangerous_option_hint">\"%1$s\" je povolené. Dotykem změníte nastavení.</string>
+  <string name="dangerous_option_hint_title">Nebezpečná funkce povolena</string>
   <string name="gxzw_dialog_message">Pro spolehlivé používání senzoru otisku prstu v displeji, nepoužívejte ochranná skla a fólie.</string>
   <string name="gxzw_dialog_not_show_again">Znovu nezobrazovat</string>
   <string name="gxzw_dialog_ok">Rozumím</string>
@@ -5907,9 +5907,6 @@ Chcete-li použít tuto funkci, zapněte nabídku dostupnosti a klepněte na tla
   <string name="miui_lab_home_feed_desc">Příběhy</string>
   <string name="miui_lab_home_feed_title">Mediální Centrum</string>
   <string name="support_gesture_title">3D vzory</string>
-  <string name="dangerous_option">Nebezpečné vývojářské nastavení</string>
-  <string name="dangerous_option_hint">\"%1$s\" je povolené. Dotykem změníte nastavení.</string>
-  <string name="dangerous_option_hint_title">Nebezpečná funkce povolena</string>
   <string name="dangerous_option_switch_title">Upozornit na nebezpečné funkce</string>  
   <string name="aod_and_lock_screen_settings_title">Ambientní displej a Zámek obrazovky</string>
   <string name="aod_settings_category_name">Ambientný displej</string>
@@ -5941,5 +5938,5 @@ Chcete-li použít tuto funkci, zapněte nabídku dostupnosti a klepněte na tla
   <string name="status_bar_title">Lišta upozornění</string>
   <string name="unlock_mode_title">Zámek obrazovky</string>
   <string name="volume_launch_camera_summary">Dvojitým stisknutím tlačítka hlasitosti spustit Fotoaparát pokud je uzamčena obrazovka</string>
-  <string name="wakeup_and_sleep_settings_category_name">Nastavení zámku obrazovky</string><B></B>  
+  <string name="wakeup_and_sleep_settings_category_name">Nastavení zámku obrazovky</string>  
 </resources>
